# pig-nation-coins

./: .gitignore  Cargo.toml  README-CN  README-CN.md  README-EN.md  README-JP  README-JP.md  README.md  babel.config.json  index.html  lighthouse-report.html  package-lock.json  package.json  start-server.sh  todo.md  vite.config.js  webpack.config.js
.github/workflows/: release.yml
public/: background.js  content.js  manifest.json  utils.js
src/: App.css  App.jsx  api_service.rs  index.css  index.jsx  jwt_manager.rs  lib.rs  main.js  main.rs  router.jsx  store.js  system_settings_manager.rs  theme.css  transaction_manager.rs  user_manager.rs
src/components/: BottomNav.jsx  DeviceManager.jsx  ErrorBoundary.jsx  LoadingOverlay.jsx  NavBar.jsx  ProtectedRoute.jsx  TwoFactorAuth.jsx
src/locales/: en.json  ja.json  zh.json
src/services/: api.js  authService.js
src/styles/: BottomNav.css  DeviceManagementView.css  DeviceManager.css  Login.css  NavBar.css  Register.css  TwoFactorAuth.css  UserDashboard.css  global.css
src/utils/: i18n.js
src/views/: AdminDashboard.js  DeviceManagementView.jsx  ErrorPage.jsx  Login.jsx  MerchantDashboard.js  NotFound.jsx  Payment.js  Register.jsx  UserDashboard.jsx
tests/: auth_test.rs
