[package]
name = "pig-nation-coins-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
argon2 = "0.5"



rand_core = { version = "0.6", features = ["std"] }



chrono = { version = "0.4", features = ["serde"] }


